--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "compio_monoio_bench"
+name = "async_runtime_bench"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,7 +7,9 @@ edition = "2021"
 compio = { version = "0.15.0", features = ["default", "macros", "dispatcher"] }
 futures-util = { version = "0.3.31" }
 monoio = "0.2.4"
+tokio = { version = "1.0", features = ["full"] }
 core_affinity = "0.8"
+rand = "0.8"
 
 
 [dev-dependencies]
